menu and header

--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,1 +1,4 @@
 @import "../libs/bootstrap-grid/bootstrap-grid"
+@import "../libs/slick-carousel/slick/slick-theme"
+@import "../libs/slick-carousel/slick/slick"
+
