--- a/app/sass/_vars.sass
+++ b/app/sass/_vars.sass
@@ -1,4 +1,6 @@
 @import "bourbon"
 
 $default-font: "roboto", sans-serif
-$accent: orange
+$gray-color: #eaebed
+$menu-color: #f3f3f3
+$accent-color: #3971ff
