--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -69,7 +69,7 @@ ul, li
 	background-color: $menu-color
 	border-right: 1px solid #a7a7a7
 	padding: 60px 30px 35px
-
+	height: 100vh
 	.menu
 		li 
 			border-bottom: 1px solid #a7a7a7
@@ -116,9 +116,78 @@ ul, li
 	width: calc(100% - 214px)
 	background-color: $gray-color
 	height: 100%
+	color: $dark-color
 
 	.main-header
 		min-height: 588px
+		background-image: url("../img/img.png")
+		background-repeat: no-repeat
+		background-position: 50px 146px
+
+		.sl-header
+			margin-top: 100px
+			background-image: url("../img/img.png")
+			background-repeat: no-repeat
+			background-position: 20px 50px
+
+			&__slider
+				margin-bottom: 20px
+				h1 
+					font-size: 48px
+					line-height: 40px
+					text-transform: uppercase
+					display: block
+					p 
+						font-size: 30px
+						margin: 5px 0 15px 
+					span 
+						color: lighten($accent-color, 5%)
+				h3 
+					color: $accent-color
+					font-weight: 300
+					position: relative
+					display: inline-block
+					padding: 10px 0 10px 20px
+					margin-top: 0
+					margin-bottom: 30px
+					&::before, &::after
+						position: absolute
+						content: ""
+						width: calc(100% + 40px)
+						height: 1px
+						background-color: $dark-color
+						top: 0
+						left: -20px
+					&::after
+						top: 100%
+
+			&-nav 
+				.sl-nav__head
+					text-transform: uppercase
+					position: relative
+					display: inline-block
+					padding-bottom: 6px
+					cursor: pointer
+					width: 150px
+					margin-right: 30px
+					transition: color ease-in-out 0.3s
+					&::before
+						position: absolute
+						content: ""
+						bottom: 0	
+						width: 50px
+						height: 2px
+						z-index: 1
+						background-color: $accent-color
+						transition: width ease-in-out 0.3s
+					&:hover, &.slick-current
+						color: $accent-color
+						&::before
+							width: 100%
+					
+
+
+
 
 
 
