--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -70,6 +70,7 @@ ul, li
 	border-right: 1px solid #a7a7a7
 	padding: 60px 30px 35px
 	height: 100vh
+	position: fixed
 	.menu
 		li 
 			border-bottom: 1px solid #a7a7a7
@@ -118,6 +119,38 @@ ul, li
 	height: 100%
 	color: $dark-color
 
+	// стили для общей секции
+	.sect 
+		padding-top: 90px
+		padding-bottom: 90px
+		&-head 
+			font-size: 30px
+			text-transform: uppercase
+			color: #333
+			display: inline-block
+			position: relative
+			padding-bottom: 20px
+			margin-bottom: 80px
+			&::after,
+			&::before
+				position: absolute
+				content: ""
+				bottom: 0
+				left: 0
+				background-color: $accent-color
+			&::before
+				width: 65px
+				height: 1px
+			&::after
+				width: 5px
+				height: 5px
+				border-radius: 50%
+				left: 65px
+				bottom: -2px
+		
+		.sect-item
+				
+	// секция header
 	.main-header
 		min-height: 588px
 		background-image: url("../img/img.png")
@@ -125,7 +158,7 @@ ul, li
 		background-position: 50px 146px
 
 		.sl-header
-			margin-top: 100px
+			margin-top: 80px
 			background-image: url("../img/img.png")
 			background-repeat: no-repeat
 			background-position: 20px 50px
@@ -185,10 +218,30 @@ ul, li
 						&::before
 							width: 100%
 					
-
-
-
-
-
+	// секция skills
+	.skills
+		background-color: #FFF
+		
+		&-item
+			margin-bottom: 35px
+			.line-head
+				font-size: 16px
+				text-transform: uppercase
+				margin-bottom: -10px
+				opacity: .8
+				p 
+					float: left
+					margin: 0
+				span 
+					float: right
+			progress[value]
+				width: 100%
+				height: 4px 
+				appearance: none
+				border: none
+				background-color: lighten($accent-color, 20%)
+				position: relative
+				overflow: hidden 
+				
 
 @import "media" 
