--- a/app/sass/_libs.sass
+++ b/app/sass/_libs.sass
@@ -1,4 +1,5 @@
 @import "../libs/bootstrap-grid/bootstrap-grid"
 @import "../libs/slick-carousel/slick/slick-theme"
 @import "../libs/slick-carousel/slick/slick"
+@import "../libs/font-awesome/font-awesome.min"
 
