--- a/app/sass/_fonts.sass
+++ b/app/sass/_fonts.sass
@@ -2,3 +2,5 @@
 
 +font-face("roboto", "../fonts/RobotoRegular/RobotoRegular", $file-formats: eot woff ttf)
 +font-face("roboto", "../fonts/RobotoBold/RobotoBold", bold, $file-formats: eot woff ttf)
+
+@import url('https://fonts.googleapis.com/css?family=Exo+2:300,400,500,600,700')
