--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -488,6 +488,35 @@ a.link
 				transform: translateY(-2px)
 				box-shadow: 0 10px 10px rgba(#666, .3)
 
+	// секция клиенты
+	.clients
+		background-color: #FFF
+		background-image: url("../img/clients.jpg")
+		background-size: cover
+		background-position: center top
+		text-align: center
+
+		.clients-nav
+			text-align: center
+			width: 150px
+		.wrap-img
+			display: inline-block
+			width: 82px
+			height: 82px
+			padding: 10px
+			background-color: #ccc
+			position: relative
+			box-shadow: 0 0 10px rgba(#ccc, 0.3)
+			cursor: pointer
+			transition: all ease-in-out 0.2s
+			float: left
+			img
+				max-width: 182px
+				width: 90%
+				position: absolute
+				top: 50%
+				left: 50%
+				transform: translate(-50%, -50%)
 
 
 
