--- a/app/sass/_media.sass
+++ b/app/sass/_media.sass
@@ -10,7 +10,18 @@
 
 /* Medium Devices, Desktops */
 @media only screen and (max-width : 992px)
-	/**/
+	.right-panel
+		width: 100%
+		.sect
+			padding: 40px 0
+			
+	.form
+		margin-bottom: 44px
+	.right-panel 
+		.say 
+			.say-items li
+				margin-bottom: 40px
+				display: inline-block
 
 
 /* Small Devices, Tablets */
