--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -4,19 +4,19 @@
 @import "vars"
 
 *::-webkit-input-placeholder
-	color: #666
+	color: rgba($dark-color, 0.5)
 	opacity: 1
 
 *:-moz-placeholder
-	color: #666
+	color: rgba($dark-color, 0.5)
 	opacity: 1
 
 *::-moz-placeholder
-	color: #666
+	color: rgba($dark-color, 0.5)
 	opacity: 1
 
 *:-ms-input-placeholder
-	color: #666
+	color: rgba($dark-color, 0.5)
 	opacity: 1
 
 body input:focus:required:invalid,
@@ -49,6 +49,9 @@ ul, li
 	margin: 0
 	padding: 0
 
+p 
+	color: rgba($dark-color, 0.9)
+
 .before
 	position: absolute
 	content: ''
@@ -58,7 +61,9 @@ ul, li
 .logo
 	margin-bottom: 50px
 	display: block
+	font-weight: 300
 	span
+		font-family: "Exo 2", sans-serif
 		font-size: 24px
 		color: #333
 		display: block
@@ -71,6 +76,8 @@ a.link
 	padding: 5px
 	color: $accent-color
 	position: relative
+	font-weight: 600
+	opacity: .85
 	&::before
 		position: absolute
 		content: ""
@@ -80,6 +87,7 @@ a.link
 		bottom: 0
 		transition: width ease-in-out 0.2s
 	&:hover
+		opacity: 1
 		&::before
 			width: 100%
 
@@ -104,10 +112,11 @@ a.link
 			a 
 				text-transform: uppercase
 				color: #4c4c4c
-				opacity: .6
+				opacity: .4
 				display: block
 				margin-bottom: 20px
-				margin-top: 25px
+				margin-top: 18px
+				margin-bottom: 18px
 				position: relative
 				padding-left: 20px
 				transition-property: opacity, padding
@@ -146,7 +155,7 @@ a.link
 
 	// стили для общей секции
 	.sect 
-		padding-top: 90px
+		padding-top: 70px
 		padding-bottom: 90px
 		&:hover
 			.sect-head
@@ -194,18 +203,19 @@ a.link
 			.sect-right
 				display: inline-block
 				text-transform: uppercase
+				color: rgba($dark-color, 0.9)
 				h3 
 					margin-top: 0
 					font-size: 24px
 					line-height: 24px
 					font-weight: 300
-					margin-bottom: 20px
+					margin-bottom: 18px
 					transition: color ease-in-out 0.2s
 				p 
-					margin: 0 0 6px 0
+					margin: 0 0 4px 0
 					line-height: 20px
 			p 
-				margin-top: 20px
+				margin-top: 24px
 				margin-bottom: 0
 				
 	// секция header
@@ -213,21 +223,24 @@ a.link
 		min-height: 588px
 		background-image: url("../img/img.png")
 		background-repeat: no-repeat
-		background-position: 50px 128px
+		background-position: 110px 128px
 
 		.sl-header
 			margin-top: 80px
 			background-image: url("../img/img.png")
 			background-repeat: no-repeat
-			background-position: 20px 50px
+			background-position: 0 50px
+			padding-left: 40px
 
 			&__slider
 				margin-bottom: 20px
 				h1 
 					font-size: 48px
-					line-height: 40px
+					line-height: 34px
 					text-transform: uppercase
 					display: block
+					font-family: "Exo 2", sans-serif
+					font-weight: 500
 					p 
 						font-size: 30px
 						margin: 5px 0 15px 
@@ -238,17 +251,20 @@ a.link
 					font-weight: 300
 					position: relative
 					display: inline-block
-					padding: 10px 0 10px 20px
+					padding: 6px 0 6px 20px
 					margin-top: 0
-					margin-bottom: 30px
+					margin-bottom: 25px
 					&::before, &::after
 						@extend .before
 						width: calc(100% + 40px)
+						background-color: $dark-color
 						height: 1px
 						top: 0
 						left: -20px
 					&::after
 						top: 100%
+				p 
+					opacity: 0.8
 
 			&-nav 
 				.sl-nav__head
@@ -256,9 +272,11 @@ a.link
 					position: relative
 					display: inline-block
 					padding-bottom: 6px
+					left: 40px
 					cursor: pointer
 					width: 150px
 					margin-right: 30px
+					font-weight: 600
 					transition: color ease-in-out 0.3s
 					&::before
 						@extend .before
@@ -282,6 +300,7 @@ a.link
 				font-size: 16px
 				text-transform: uppercase
 				margin-bottom: -10px
+				line-height: 26px
 				opacity: .8
 				p 
 					float: left
@@ -290,16 +309,25 @@ a.link
 					float: right
 			progress[value]
 				width: 100%
-				height: 4px 
+				height: 5px 
 				appearance: none
 				border: none
-				background-color: lighten($accent-color, 20%)
+				background: lighten($accent-color, 25%)
 				position: relative
 				overflow: hidden 
-	
+			progress::-moz-progress-bar
+				background-color: rgba($accent-color, .8)
+			progress::-webkit-progress-bar
+				background-color: rgba($accent-color, .8)
+
+	// стили адукации
+	.education
+		padding-bottom: 15px
+
 	// секция стажа
 	.experience
 		background-color: #FFF
+		padding-bottom: 15px
 
 	// секция проект
 	.project
@@ -342,7 +370,7 @@ a.link
 					transform: rotate(90deg)
 					left: calc(50% - 29px)
 			&:hover
-				box-shadow: 0 10px 20px rgba(#ccc, 0.9)
+				box-shadow: 0 10px 10px 0 rgba(#000, 0.2)
 				a 
 					opacity: 1
 					transform: scale(1)
@@ -350,6 +378,7 @@ a.link
 		h3 
 			text-transform: uppercase
 			font-weight: 300
+			margin-bottom: 16px
 		p 
 			margin-bottom: 80px
 
@@ -357,6 +386,7 @@ a.link
 	.post 
 		background-color: #FFF
 		position: relative
+		padding-bottom: 60px
 
 		// стили навигации
 		.sl-post-nav 
@@ -428,7 +458,7 @@ a.link
 				width: 50px
 				height: 50px
 				border-radius: 50%
-				border: 1px solid $dark-color
+				border: 2px solid $dark-color
 				line-height: 50px
 				text-align: center
 				font-size: 24px
@@ -439,8 +469,13 @@ a.link
 				left: 0
 				&.sl-post-right
 					left: calc(100% - 50px)
+				i 
+					line-height: 48px
+					position: absolute
+					top: 0
+					left: calc(50% - 5px)
 				&:hover
-					border: 1px solid $accent-color
+					border: 2px solid $accent-color
 					color: $accent-color
 
 
@@ -486,6 +521,7 @@ a.link
 				p 
 					float: left
 					margin: 0
+					text-transform: uppercase
 				span 
 					float: right
 					text-transform: uppercase
@@ -535,17 +571,17 @@ a.link
 				display: block
 				em 
 					color: $accent-color
+					font-style: normal
 
 	// секция обратной связи
 	.say
 		
 		.say-items
-			&:hover
-				li 
-					i 
-						color: $accent-color
 			li 
 				margin-bottom: 100px
+				&:hover
+					>i 
+						color: $accent-color
 				>i 
 					font-size: 48px
 					display: inline-block
@@ -604,6 +640,8 @@ a.link
 				color: #666
 				cursor: pointer
 				padding: 10px
+				span 
+					color: rgba($dark-color, 0.5)
 				&:hover
 					i
 						color: $accent-color
@@ -624,7 +662,7 @@ a.link
 					top: 100%
 					width: calc(100% + 3px)
 					left: -1px
-					
+
 					>li 
 						padding: 5px 15px
 						border-bottom: 1px solid rgba($accent-color, 0.9)
@@ -639,6 +677,7 @@ a.link
 				display: inline-block
 				padding-bottom: 8px
 				position: relative
+				font-weight: 600
 				&::before
 					@extend .before
 					width: 50px
